@@ -1,13 +1,14 @@
 @echo off
 setlocal
+chcp 65001
 
 :: Configurar variables
-set APP_NAME=Gestor de Flota - Almonte
+set APP_NAME=Viajes Doñana - Almonte
 set INPUT_DIR=launcher
-set MAIN_JAR=VehiculosAyuntamiento-1.0.jar
-set MAIN_CLASS=ayuntamiento.vehiculos.app.App
+set MAIN_JAR=ViajesDonana-1.0.jar
+set MAIN_CLASS=ayuntamiento.viajes.app.App
 set MODULE_PATH=launcher/javafx
-set MODULES=javafx.controls,javafx.fxml,java.sql
+set MODULES=javafx.controls,javafx.fxml,javafx.web
 set OUTPUT_DIR=dist
 set ICON_WIN=launcher/Almonte.ico
 
@@ -26,27 +27,7 @@ jpackage ^
     --vendor "Ayuntamiento de Almonte" ^
     --icon "%ICON_WIN%" ^
     --copyright "© 2025 Ayuntamiento de Almonte - Informatica Alcaldia. Todos los derechos reservados." ^
-    --description "Proyecto Vehiculos" 
-
-
-:: Generar instalador para macOS (.dmg)
-echo Generando instalador para macOS...
-jpackage ^
-    --name "%APP_NAME%" ^
-    --input "%INPUT_DIR%" ^
-    --main-jar "%MAIN_JAR%" ^
-    --main-class "%MAIN_CLASS%" ^
-    --type dmg ^
-    --module-path "%MODULE_PATH%" ^
-    --add-modules "%MODULES%" ^
-    --dest "%OUTPUT_DIR%" ^
-    --icon "%ICON_MAC%" ^
-    --app-version "2.0" ^
-    --vendor "Ayuntamiento de Almonte" ^
-    --copyright "© 2025 Ayuntamiento de Almonte - Cristian Delgado Cruz. Todos los derechos reservados." ^
-    --description "Proyecto Archivero: Gestor de archivos de expedientes" ^
-    --win-upgrade-uuid "4e7f9d60-d535-41ea-a77f-b9bdc566045c" ^
-    --resource-dir "%APPDATA_DIR%" 
+    --description "Viajes Doñana"  
 
 echo.
 echo Paquetes creados en %OUTPUT_DIR%
